force-app/main/default/objects/ssot__ProductServiceCampaignItem__dlm/fields/ssot__ProductServiceCampaignItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductServiceCampaignItemStatus__c</fullName>
    <label>Product Service Campaign Item Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductServiceCampaignItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>