force-app/main/default/objects/ssot__ProductServiceCampaignItem__dlm/fields/ssot__ProductServiceCmpnItemStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductServiceCmpnItemStatusCategory__c</fullName>
    <label>Product Svc Cmpn Item Status Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductServiceCmpnItemStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>