force-app/main/default/objects/ssot__ProductServiceCampaignItem__dlm/fields/ssot__rel_1705061036851_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061036851_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductServiceCampaignItem_ProductId_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>ProductServiceCampaignItem_ProductId_rel</relationshipLabel>
    <relationshipName>rel_1705061036851_end</relationshipName>
    <type>Lookup</type>
</CustomField>