force-app/main/default/objects/ssot__ProductServiceCampaignItem__dlm/fields/ssot__rel_1705061037884_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061037884_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductServiceCampaignItem_CreatedBy_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ProductServiceCampaignItem_CreatedBy_rel</relationshipLabel>
    <relationshipName>rel_1705061037884_end</relationshipName>
    <type>Lookup</type>
</CustomField>